<?xml version="1.0"?>
<package format="2">
  <name>apriltag_toolbox</name>
  <version>1.0.0</version>
  <description>The apriltag_toolbox package</description>
  <maintainer email="u651601f@gmail.com">Kousuke Takeuchi</maintainer>
  <license>GPLv2.1</license>
  <url type="website">http://wiki.ros.org/apriltag_toolbox</url>
  <author email="u651601f@gmail.com">Kousuke Takeuchi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
